--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,7 @@ header {
   align-items: center;
 }
 
-.nav-item {
+.nav-item {  
   margin-right: 50px;
 }
 
@@ -121,6 +121,7 @@ header {
 }
 
 .navigation-activ {
+  position: relative;
   display: flex;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -128,6 +129,19 @@ header {
   font-weight: 500;
   line-height: 1.14;
   color: var(--accent-cl);
+}
+
+.navigation-activ::after {
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+     
+   background-color: #2196F3;
+    border-radius: 2px;
 }
 
 /*Контакты*/
@@ -289,11 +303,34 @@ header {
 }
 
 .work-item {
+  position: relative;
   margin-right: 30px;
 }
 
 .work-item:last-child {
   margin-right: 0;
+}
+
+
+.work-item > .work-name {
+position: absolute;
+bottom: 0;
+left: 0;
+padding-top: 27px;
+padding-bottom: 27px;
+content: "";
+display: block;
+width: 100%;
+height: 70px;
+background-color: rgba(47, 48, 58, 0.8);
+
+font-weight: 700;
+font-size: 14px;
+line-height: 1.14;
+text-align: center;
+letter-spacing: 0.03em;
+text-transform: uppercase;    
+color: #FFFFFF;
 }
 
 /*Команда*/
