--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,7 @@ img {
 .link {
   text-decoration: none;
   color: currentColor;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .list {
@@ -118,6 +119,7 @@ header {
   font-weight: 500;
   line-height: 1.14;
   color: var(--text-cl);
+  
 }
 
 .navigation-activ {
@@ -167,6 +169,7 @@ header {
   font-weight: 500;
   line-height: 1.14;
   color: var(--main-txt-cl);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contakts-link:hover {
@@ -221,11 +224,12 @@ header {
   background: var(--btn-bg-cl);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn:hover,
 .btn:focus {
-  background: var(--btn-bg-accent);
+  background-color: var(--btn-bg-accent);
 }
 
 /*Преимущества*/
@@ -396,6 +400,7 @@ color: #FFFFFF;
   height: 44px;
   background-color: #ffffff;
   border-radius: 50%;
+  transition: background-color  250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .socials-link:hover .socials-icon,
@@ -414,6 +419,7 @@ color: #FFFFFF;
 
 .socials-icon {
   fill: #afb1b8;
+  transition: fill  250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /*Контент портфолио*/
@@ -452,18 +458,20 @@ color: #FFFFFF;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--text-cl);
-  background: #f5f4fa;
+  background: #f5f4fa;  
   border-radius: 4px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),  background 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 
 .filter-btn:hover,
 .filter-btn:focus {
-  font-family: inherit;
+ /* font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
   text-align: center;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.03em;*/
   color: var(--secondary-txt-cl);
   background: var(--btn-bg-cl);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
@@ -487,6 +495,7 @@ color: #FFFFFF;
 
 .page-link {
   display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .page-link:hover,
@@ -552,10 +561,12 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1p
 
   border: 1px solid #afb1b8;
   border-radius: 4px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-icon {
   fill: #afb1b8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-link:hover,
@@ -622,6 +633,7 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1p
 .email,
 .phone {
   color: rgba(255, 255, 255, 0.6);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .email:hover,
@@ -657,12 +669,9 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1p
   height: 44px;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.connect-link:hover .socials-icon,
-.connect-link:focus .socials-icon {
-  fill: #ffffff;
-}
 
 .connect-link:hover,
 .connect-link:focus {
