--- a/css/styles.css
+++ b/css/styles.css
@@ -232,6 +232,40 @@ header {
   background-color: var(--btn-bg-accent);
 }
 
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+ 
+.modal-wrapper {
+  position: absolute;
+  width: 530px;
+  height: 580px;
+  top: 50%;
+  left: 50%;
+  transform:translate(-50%, -50%);
+
+  background-color: #FFFFFF;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+}
+
+.modal-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+   
+
+  cursor: pointer;
+}
+
 /*Преимущества*/
 
 .benefits-section {
