--- a/css/styles.css
+++ b/css/styles.css
@@ -102,7 +102,7 @@ header {
   align-items: center;
 }
 
-.nav-item {  
+.nav-item {
   margin-right: 50px;
 }
 
@@ -119,7 +119,6 @@ header {
   font-weight: 500;
   line-height: 1.14;
   color: var(--text-cl);
-  
 }
 
 .navigation-activ {
@@ -141,9 +140,9 @@ header {
   display: block;
   width: 100%;
   height: 4px;
-     
-   background-color: #2196F3;
-    border-radius: 2px;
+
+  background-color: #2196f3;
+  border-radius: 2px;
 }
 
 /*Контакты*/
@@ -177,7 +176,6 @@ header {
 }
 
 .contakts-icon {
- 
   margin-right: 10px;
   fill: currentColor;
 }
@@ -191,8 +189,12 @@ header {
   padding-top: 200px;
   padding-bottom: 200px;
   text-align: center;
-  background-color: #C4C4C4;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/fon/fon.jpg);
+  background-color: #c4c4c4;
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/fon/fon.jpg);
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -233,43 +235,50 @@ header {
 }
 
 .backdrop {
- 
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
+  z-index: 10;
 }
+
 .backdrop.is-hidden {
-opacity: 0;
-visibility: hidden;
+  opacity: 0;
+  visibility: hidden;
   pointer-events: none;
 }
- 
+
 .modal-wrapper {
   position: absolute;
   width: 530px;
   height: 580px;
   top: 50%;
   left: 50%;
-  transform:translate(-50%, -50%);
-
-  background-color: #FFFFFF;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
+  transform: translate(-50%, -50%);
+  background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  z-index: 10;
 }
 
 .modal-btn {
+  padding: 4px;
   position: absolute;
   top: 8px;
   right: 8px;
   width: 30px;
   height: 30px;
+  background: #ffffff;
   border-radius: 50%;
-   
-
+  border: 1px solid rgba(0, 0, 0, 0.1);
   cursor: pointer;
+}
+
+.close-btn {
+  color: #000000;
 }
 
 /*Преимущества*/
@@ -300,7 +309,7 @@ visibility: hidden;
   margin-bottom: 30px;
   display: flex;
   align-items: center;
-  justify-content: center;  
+  justify-content: center;
   height: 120px;
   background: #f5f4fa;
   border-radius: 4px;
@@ -355,26 +364,26 @@ visibility: hidden;
   margin-right: 0;
 }
 
-
 .work-item > .work-name {
-position: absolute;
-bottom: 0;
-left: 0;
-padding-top: 27px;
-padding-bottom: 27px;
-content: "";
-display: block;
-width: 100%;
-height: 70px;
-background-color: rgba(47, 48, 58, 0.8);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  content: "";
+  display: block;
+  width: 100%;
+  height: 70px;
+  background-color: rgba(47, 48, 58, 0.8);
 
-font-weight: 700;
-font-size: 14px;
-line-height: 1.14;
-text-align: center;
-letter-spacing: 0.03em;
-text-transform: uppercase;    
-color: #FFFFFF;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+  z-index: 5;
 }
 
 /*Команда*/
@@ -429,7 +438,7 @@ color: #FFFFFF;
 .socials {
   display: flex;
   justify-content: center;
-  align-items: center;  
+  align-items: center;
 }
 
 .socials-link {
@@ -440,7 +449,7 @@ color: #FFFFFF;
   height: 44px;
   background-color: #ffffff;
   border-radius: 50%;
-  transition: background-color  250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .socials-link:hover .socials-icon,
@@ -459,7 +468,7 @@ color: #FFFFFF;
 
 .socials-icon {
   fill: #afb1b8;
-  transition: fill  250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /*Контент портфолио*/
@@ -498,15 +507,15 @@ color: #FFFFFF;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--text-cl);
-  background: #f5f4fa;  
+  background: #f5f4fa;
   border-radius: 4px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),  background 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter-btn:hover,
 .filter-btn:focus {
- 
   color: var(--secondary-txt-cl);
   background: var(--btn-bg-cl);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
@@ -536,7 +545,8 @@ color: #FFFFFF;
 .page-link:hover,
 .page-link:focus {
   display: block;
-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .page-link:hover .page-overlay {
@@ -575,32 +585,29 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1p
 }
 
 .page-img {
-  position: relative;   
+  position: relative;
   overflow: hidden;
 }
- 
 
-  .page-overlay {   
+.page-overlay {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;    
+  height: 100%;
   background-color: rgba(33, 150, 243, 0.9);
   transform: translatey(+101%);
   transition: transform 250ms ease;
-  }
+}
 
-  .page-overlay>p {   
+.page-overlay > p {
   padding: 56px 24px 70px 24px;
   font-size: 18px;
-  line-height: 1.56;      
-  letter-spacing: 0.03em;     
-  color: #FFFFFF;
-    }
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+}
 
- 
-  
 /*Клиенты*/
 
 .clients-section {
@@ -737,7 +744,6 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1p
   border-radius: 50%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 
 .connect-link:hover,
 .connect-link:focus {
